<?xml version="1.0"?>
<package format="2">
  <name>pca9685_driver</name>
  <version>0.0.0</version>
  <description>The pca9685_driver package</description>

  <maintainer email="ricardo.delfin.garcia@gmail.com">Ricardo Delfin Garcia</maintainer>
  <license>Apache 2.0</license>
  <author email="ricardo.delfin.garcia@gmail.com">Ricardo Delfin Garcia</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>jetson_control_msgs</depend>
  
  <export>
  </export>
</package>
